// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-metric-aggregate-function-field Renders \`c-alarm-metric-aggregate-function-field\` with custom props 1`] = `
<div
  class="v-input mt-0 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  hidedetails="true"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <legend
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          Custom label
        </legend>
        <div
          class="v-radio theme--light v-item--active"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              radio_button_checked
            </i>
            <input
              aria-checked="true"
              name="custom_name"
              role="radio"
              type="radio"
              value="avg"
            />
            <div
              class="v-input--selection-controls__ripple primary--text"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Average
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="sum"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Sum
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="min"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Min
          </label>
        </div>
      </div>
    </div>
    <div
      class="v-messages theme--light"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-aggregate-function-field Renders \`c-alarm-metric-aggregate-function-field\` with default props 1`] = `
<div
  class="v-input mt-0 theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="sum"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Sum
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="avg"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Average
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="min"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Min
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="max"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Max
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="aggregate_func"
              role="radio"
              type="radio"
              value="last"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Last
          </label>
        </div>
      </div>
    </div>
    <div
      class="v-messages theme--light"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
  </div>
</div>
`;
